--- a/AsistenciaRDM 2.5/app/src/main/res/values/strings.xml
+++ b/AsistenciaRDM 2.5/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="activity_evento">Seleccinar un evento</string>
     <string name="action_settings">Settings</string>
     <string name="Configuracion">Configuracion</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
